@@ -26,36 +26,47 @@ import ca.uhn.fhir.rest.api.server.RequestDetails;
 
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.apache.commons.lang3.ObjectUtils.getIfNull;
 
 /**
- * Provides the list of {@link PartitionedUrl} that a job should run against.
+ * Resolves FHIR search URLs into partition-aware {@link PartitionedUrl} entries for batch2 bulk
+ * operations ({@code $reindex}, {@code $delete-expunge}, {@code $mdm-submit}, etc.).
+ *
+ * <p>Implementations determine which partition each URL targets and may expand a single
+ * {@link RequestPartitionId#isAllPartitions() allPartitions} entry into one {@link PartitionedUrl}
+ * per concrete partition, so that downstream job steps can process each partition independently.</p>
+ *
+ * @see ca.uhn.fhir.batch2.coordinator.DefaultJobPartitionProvider
  */
 public interface IJobPartitionProvider {
 
 	/**
-	 * Provides the list of {@link PartitionedUrl} to run job steps against, based on the request that initiates the job
-	 * and the urls that it's configured with.
-	 * @param theRequestDetails the requestDetails
-	 * @param theUrls the urls to run the job against
-	 * @return the list of {@link PartitionedUrl}
+	 * Resolves each FHIR search URL to its target partition based on the caller's request context.
+	 * If a URL resolves to {@link RequestPartitionId#isAllPartitions() allPartitions}, the implementation
+	 * may expand it into one {@link PartitionedUrl} per concrete partition, so the returned list can be
+	 * larger than the input.
+	 *
+	 * @param theRequestDetails the request that initiated the bulk operation
+	 * @param theUrls FHIR search URLs in {@code ResourceType?params} form (must not be empty)
+	 * @return partition-aware entries — one per (url, partition) pair
 	 */
 	default List<PartitionedUrl> getPartitionedUrls(RequestDetails theRequestDetails, List<String> theUrls) {
-		return theUrls.stream().map(url -> new PartitionedUrl().setUrl(url)).collect(Collectors.toList());
+		return theUrls.stream().map(url -> new PartitionedUrl().setUrl(url)).toList();
 	}
 
 	/**
-	 * Returns a collection of partitions representing "all partitions" for each shard
+	 * Returns the concrete partition list representing "all partitions" in this system.
+	 * Used during all-partitions expansion in {@link #getPartitionedUrls}.
 	 */
 	List<RequestPartitionId> getAllPartitions();
 
 	/**
-	 * Given a partition (which might be an individual partition or list of partitions, or even
-	 * ALL partitions), separates it into a list of partitions that should be executed in separate
-	 * work chunks.
+	 * Splits a single {@link RequestPartitionId} (which may represent one partition, several, or
+	 * all partitions) into individual entries that should each become a separate work chunk.
 	 *
+	 * @param theInputPartition the partition to split; {@code null} is treated as all partitions
+	 * @return one entry per work chunk
 	 * @since 8.8.0
 	 */
 	default List<RequestPartitionId> splitPartitionsForJobExecution(RequestPartitionId theInputPartition) {
@@ -63,8 +74,13 @@ public interface IJobPartitionProvider {
 	}
 
 	/**
-	 * Converts a {@link PartitionedUrl} into a list of {@link ChunkRangeJson}s for the given
-	 * start and end date. By default, a single URL is turned into a single chunk range.
+	 * Converts a {@link PartitionedUrl} into {@link ChunkRangeJson} entries spanning the given date range.
+	 * The default produces a single chunk; implementations may split further (e.g. per-shard).
+	 *
+	 * @param thePartitionedUrl the URL and its resolved partition
+	 * @param theStart chunk range start (inclusive)
+	 * @param theEnd chunk range end (inclusive)
+	 * @return one or more chunk ranges to process
 	 */
 	default List<ChunkRangeJson> toChunkRanges(PartitionedUrl thePartitionedUrl, Date theStart, Date theEnd) {
 		RequestPartitionId requestPartitionId = thePartitionedUrl.getRequestPartitionId();
